MVP__beep-scroll-issue: Update search z-index

--- a/src/site/home/index.scss
+++ b/src/site/home/index.scss
@@ -40,6 +40,7 @@
     position: relative;
     margin-top: -102px;
     padding: 22px 3.8vw;
+    z-index: $z-index-base;
   }
 
   &__hero-image {
